[gd_scene load_steps=4 format=3 uid="uid://drg284nav81np"]

[ext_resource type="Script" path="res://main.gd" id="1_v74f3"]
[ext_resource type="PackedScene" uid="uid://qy8kr6ajqh8e" path="res://template/multiplayer/lobby.tscn" id="2_eilpu"]
[ext_resource type="PackedScene" uid="uid://ne1viqqrpxbv" path="res://game.tscn" id="3_piruo"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v74f3")
LobbyScene = ExtResource("2_eilpu")
GameScene = ExtResource("3_piruo")

[node name="find_match" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -128.0
offset_top = 64.0
offset_right = -16.0
offset_bottom = 96.0
grow_horizontal = 0
text = "Find Match"

[node name="host_match" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -128.0
offset_top = 112.0
offset_right = -16.0
offset_bottom = 144.0
grow_horizontal = 0
text = "Host Match"

[node name="name_line" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -128.0
offset_top = 17.0
offset_right = -16.0
offset_bottom = 48.0
grow_horizontal = 0

[node name="solo_player" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -128.0
offset_top = 161.0
offset_right = -16.0
offset_bottom = 193.0
grow_horizontal = 0
text = "Solo"

[connection signal="pressed" from="find_match" to="." method="_on_find_match_pressed"]
[connection signal="pressed" from="host_match" to="." method="_on_host_match_pressed"]
[connection signal="pressed" from="solo_player" to="." method="_on_solo_player_pressed"]
